[package]
name = "twitter-space-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.2.12", features = ["derive"] }
env_logger = "0.9.0"
hound = "3.4.0"
log = "0.4"
portaudio = "0.7.0"
regex = "1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
